# scout

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
docs/: architecture.md
docs/monthly-updates/: 2026-05.md
src/: config.rs  dropped.rs  explain.rs  fetch.rs  fetcher.rs  infer.rs  init.rs  lib.rs  main.rs  rank.rs  render.rs  scan.rs  score.rs  took.rs  watchlist.rs
templates/: config.toml  watchlist.yaml
tests/: comments_http.rs  config.rs  contributing_http.rs  dropped.rs  explain_http.rs  factors.rs  fetch.rs  fetch_http.rs  fetcher_http.rs  infer.rs  init.rs  issues.rs  issues_http.rs  rank.rs  render.rs  scan.rs  score.rs  timeline_http.rs  took.rs  watchlist.rs
