[package]
name = "scout"
version = "0.1.0"
edition = "2024"
description = "Rank open-source issues worth contributing to"
license = "MIT"
repository = "https://github.com/truffle-dev/scout"

[[bin]]
name = "scout"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "gzip"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
toml = "0.8"

[dev-dependencies]
wiremock = "0.6"
